cluster/first-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organisation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organisation
  template:
    metadata:
      labels:
        app: organisation
    spec:
      containers:
        - name: organisation
          image: samburi/organisation:1.0.3.7
          ports:
            - containerPort: 9000
          hostAliases:
            - ip: "${HOST_MACHINE}"
              hostnames:
                - "ev.test"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: organisation
spec:
  selector:
    app: organisation
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicegateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicegateway
  template:
    metadata:
      labels:
        app: servicegateway
    spec:
      containers:
        - name: servicegateway
          image: samburi/service-gateway:1.0.3.7
          ports:
            - containerPort: 8089
          hostAliases:
            - ip: "${HOST_MACHINE}"
              hostnames:
                - "ev.test"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: servicegateway
spec:
  selector:
    app: servicegateway
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
