cluster/keycloak-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
     containers:
      - name: keycloak
        image: samburi/keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    app: keycloak

# kubectl apply -f k8s/deployment.yml
# kubectl delete -f k8s/deployment.yml
