cluster/keycloak-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  # type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      # serviceAccountName:  easyvalues-kube-sa
      containers:
      - name: keycloak
        image: samburi/keycloak
        ports:
        # - name: http
         - containerPort: 8080
        # - name: https
        #   containerPort: 8443
        # readinessProbe:
        #   httpGet:
        #     path: /auth/realms/master
        #     port: 80

# kind load docker-image jboss/keycloak
# kubectl apply -f keycloak-mysql.yaml
# kubectl apply -f InUse/keycloak-mysql.yaml
# kubectl delete -f deployments/keycloak-mysql.yaml
# kubectl apply -f keycloak-mysql.yaml
# kubectl port-forward deployment/keycloak 8080:8080
# 10.62.16.3
