cluster/loan.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan
  labels:
    app: loan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan
  template:
    metadata:
      labels:
        app: loan
    spec:
      hostAliases:
      - ip: "192.168.1.100"
        hostnames:
        - "auth.ev.test"
        - "org.ev.test"
        - "api.ev.test"        
      containers:
        - name: loan
          image: samburi/loan:1.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 9015
---
apiVersion: v1
kind: Service
metadata:
  name: loan
spec:
  ports:
    - targetPort: 9015
      port: 9015
  selector:
    app: loan

# kubectl apply -f loan.yml
# kubectl delete -f loan.yml
