cluster/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyvalues-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:  
  - host: auth.ev.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080  
  - host: org.ev.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: organisation
            port:
              number: 9000
  - host: api.ev.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servicegateway
            port:
              number: 8089
